--- a/css/styles.css
+++ b/css/styles.css
@@ -194,7 +194,7 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  min-height: 20em;
+  height: 20em;
   top: 80px;
   width: 100%;
 }
