--- a/css/styles.css
+++ b/css/styles.css
@@ -246,8 +246,14 @@ nav h1 a {
 }
 #image-cuisine-container {
   width: 90%;
+  margin: auto;
+}
+#restaurant-container table {
+  text-align: left;
+  margin: auto;
 }
 #restaurant-container, #reviews-container {
+  text-align: center;
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 3em 2em;
@@ -279,13 +285,15 @@ nav h1 a {
 }
 #reviews-list ul {
   width: 100%;
+  margin: auto;
 }
 #reviews-list li {
+  margin: 0 auto 30px;
+  text-align: left;
   background-color: #fff;
     border: 2px solid #f3f3f3;
   display: block;
   list-style-type: none;
-  margin: 0 0 30px;
   overflow: hidden;
   padding: 0 20px 20px;
   position: relative;
